FIxed bug -- Homepage Image not showing

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -55,7 +55,7 @@ nav .menu {
   color: white;
 }
 .img {
-  background: url(/images/homepage_image.jpg) no-repeat;
+  background: url(/images/homepage_image.png) no-repeat;
   width: 100%;
   height: 100vh;
   background-size: cover;
